<resources>
    <string name="app_name">ComputingProject2.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="calorie_tracker">Calorie Tracker</string>
    <string name="weight_plan">Weight Plan</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchFood">Search</string>
    <string name="title_activity_display_message">Search Food</string>
    <string name="title_activity_display_message2">Information</string>
    <string name="scanFood">Scan</string>
    <string name="saveToday">Save</string>
    <string name="openCalculator">Calorie Goal</string>
    <string name="clearData">Clear all items currently inside the Calorie Tracker?</string>
    <string name="clearHistory">Clear all history?</string>
    <string name="setGoal">Set a custom calorie goal?</string>
    <string name="amount">amount</string>
    <string name="calories_remaining">calories remaining</string>
    <string name="food_name">Food Name</string>
    <string name="calories_100g">Calories (100g)</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_history">Clear History</string>
    <string name="macronutrients">Macronutrients:</string>
    <string name="protein">Protein -</string>
    <string name="carbohydrates">Carbohydrates -</string>
    <string name="fat">Fat -</string>
    <string name="calories">calories</string>
    <string name="dietary_fibre">Dietary Fibre -</string>
    <string name="total_sugars">Total Sugars -</string>
    <string name="micronutrients">Micronutrients:</string>
    <string name="vitamin_a">Vitamin A -</string>
    <string name="vitamin_c">Vitamin C -</string>
    <string name="vitamin_d">Vitamin D -</string>
    <string name="vitamin_b6">Vitamin B6 -</string>
    <string name="vitamin_b12">Vitamin B12 -</string>
    <string name="potassium">Potassium -</string>
    <string name="calcium">Calcium -</string>
    <string name="iron">Iron -</string>
    <string name="magnesium">Magnesium -</string>
    <string name="sodium">Sodium -</string>
    <string name="textview">TextView</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="age">Age</string>
    <string name="height_cm">Height (cm)</string>
    <string name="gender">Gender:</string>
    <string name="calculate">Calculate</string>
    <string name="custom_value">Custom Value?</string>
    <string name="set">Set</string>
    <string name="search">Search</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
