<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_top">

        <item
            android:id="@+id/nav_calorie_tracker"
            android:icon="@drawable/ic_menu_calorie_tracker_black_24dp"
            android:title="@string/calorie_tracker" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history_24dp"
            android:title="@string/history" />

    </group>


    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings_black_24dp"
            android:title="@string/settings" />

    </group>

</menu>
